[package]
name = "jpegsfun-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jpegsfun_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "^0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "^0.30.1", features = ["metadata"]}
time = "0.3.28"
mpl-token-metadata = "4.1.2"
solana-program = "2.0.4"